# claude-subagent-editor

./: .gitignore  CLAUDE.md  README.md  components.json  pyproject.toml
docs/plans/: 2026-01-13-phase1-core-infrastructure.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  tokens.css
frontend/src/components/: ProjectPicker.tsx
frontend/src/types/: index.ts
scripts/: build.sh
src/claude_subagent_editor/: __init__.py  __main__.py  main.py
src/claude_subagent_editor/api/: __init__.py  routes.py
src/claude_subagent_editor/models/: __init__.py  schemas.py
src/claude_subagent_editor/services/: __init__.py  agent_parser.py  discovery.py  mcp_tool_discovery.py
src/claude_subagent_editor/static/: index.html
src/claude_subagent_editor/static/assets/: index-1DShcsRF.js  index-6CCSoGLt.css  index-9zKJUST-.js  index-B0bwfPrC.js  index-BEnSYPM1.js  index-BLe-CqKA.css  index-Bo5pV9ZE.css  index-Bq3SfaPf.js  index-Bu5hLD_U.js  index-BuEzRYED.css  index-Bws6183E.css  index-C3jiZ_PE.css  index-CVeNulQx.js  index-ChqsJXOz.css  index-CiT_ZzBy.js  index-Clc5k6A9.css  index-CnDXT240.js  index-Cu9V5mV_.css  index-D3JwSyyh.css  index-D684a1ZX.js  index-DN4dQVrE.js  index-DWzN5nzI.js  index-Dknr3V5c.js  index-GRxEayvl.css  index-Msn_HXxO.js  index-T_ieqbHK.js  index-_q1p04UP.css  index-cB8UauNI.js  index-fg0-Ow6e.css  (+1 more)
tests/: __init__.py  test_agent_parser.py  test_discovery.py  test_mcp_tool_discovery.py  test_resources_endpoint.py  test_routes.py  test_schemas.py
