[project]
name = "claude-subagent-editor"
version = "0.1.0"
description = "Web-based editor for Claude Code subagent YAML configuration files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.5.0",
    "watchfiles>=0.21.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
claude-subagent-editor = "claude_subagent_editor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_subagent_editor"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/claude_subagent_editor/**/*.py",
    "src/claude_subagent_editor/static/**/*",
]
